[package]
name = "datastructure"
version = "0.1.0"
authors = ["code-mcx <1827939333@qq.com>"]
edition = "2018"

[workspace]
members = [
    "src/sparsearray",
    "src/queue/sequence",
    "src/queue/round"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
